Fix scroll animation overflow issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,19 +19,17 @@
 
 html{
   scroll-behavior: smooth !important;
+  overflow-x: hidden;
 }
 
 body {
   /* color: rgb(var(--foreground-rgb)); */
   color: #000000;
   background: var(--background-body);
-  /* overflow-x: clip; */
-  /* background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb)); */
+  overflow-x: hidden;
+  box-sizing: border-box;
+  position: relative;
+
 }
 
 
